--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="all-products.html">Prod</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="all-products.html">Products</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contact.html">Contact Us</a></li>
                     </ul>
                   </div>
